Fix some timetable line not visible on mobile

--- a/react/src/styles/App.module.scss
+++ b/react/src/styles/App.module.scss
@@ -1076,10 +1076,12 @@ a {
                     } 
                     &--dashed {
                         border-bottom-style: dashed;
+                    } 
+                    &--mobile-noline {
                         @media #{$media-portrait} {
                             border-bottom: none;
                         } 
-                    } 
+                    }
                 } 
     
                 &__cell {
